--- a/main_window_ui.ui
+++ b/main_window_ui.ui
@@ -107,7 +107,7 @@
      </rect>
     </property>
     <property name="plainText">
-     <string>Send Command
+     <string>
 </string>
     </property>
    </widget>
